feat: Enhance product and inventory management with CRUD operations and exception handling